@@ -17,7 +17,6 @@ import javax.transaction.Transactional;
 import java.util.List;
 import java.util.UUID;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -44,10 +43,10 @@ public class EnrollmentServiceImpl implements EnrollmentService {
 
     @Override
     public List<EnrollmentDto> searchEnrollments(SearchRequest searchRequest) {
-        SearchSpecification<Enrollment> searchSpecification = new SearchSpecification<Enrollment>(searchRequest);
+        SearchSpecification<Enrollment> searchSpecification = new SearchSpecification<>(searchRequest);
         Pageable pageable = SearchSpecification.getPage(searchRequest.getPage(), searchRequest.getSize());
         var result = enrollmentRepository.findAll(searchSpecification, pageable);
-        return applicationMapper.enrollmentToDto(result.get().collect(Collectors.toList()));
+        return applicationMapper.enrollmentToDto(result.get().toList());
     }
 
     @Override
@@ -70,6 +69,7 @@ public class EnrollmentServiceImpl implements EnrollmentService {
     public EnrollmentDto updateEnrollment(EnrollmentDto enrollmentDto) {
         var enrollment = findById.apply(enrollmentDto.getId());
         var user = enrollmentDto.getStudent();
+        // FIXME: Optimistic locking
         if(user != null && user.getId() != null && !enrollment.getStudent().getId().toString().equals(enrollmentDto.getStudent().getId().toString())) {
             var newUser = userRepository.findById(enrollmentDto.getStudent().getId())
                     .orElseThrow(() -> new ApplicationException("Not Found", HttpStatus.NOT_FOUND, "Not found user: " + enrollmentDto.getStudent().getId().toString()));
